update all files

--- a/Final_Setup/1. Employee-App-Creation-in-NodeJS-Postgres.md
+++ b/Final_Setup/1. Employee-App-Creation-in-NodeJS-Postgres.md
@@ -317,6 +317,81 @@ employee-postgres
 ```
 http://<VM-IP>:3000
 ```
+http://<VM-IP>:3000
+```
+
+I can’t directly run `curl` against your VM, but I can **show you the exact `curl` command to use** and **generate a clean report template** based on the expected result. You can paste the actual output if you want me to finalize the report.
+
+---
+
+## ✅ Curl Command to Check UI Access
+
+Run this from your local machine or another VM that has network access:
+
+```bash
+curl -I http://<VM-IP>:3000
+```
+
+🔹 Replace `<VM-IP>` with your actual VM IP address.
+
+### Optional (more detailed check)
+
+```bash
+curl -v http://<VM-IP>:3000
+```
+
+---
+
+## 📋 What to Look For
+
+| Indicator       | Expected Value                  |
+| --------------- | ------------------------------- |
+| HTTP Status     | `200 OK`                        |
+| Server Response | HTML / Web UI content           |
+| Connection      | Successful (no timeout/refused) |
+
+---
+
+## 📝 Generated Access Verification Report
+
+### 🌐 STEP 8: UI Access Verification (Browser)
+
+**Target URL:**
+
+```
+http://<VM-IP>:3000
+```
+
+**Validation Method:**
+`curl` command-line HTTP request
+
+**Command Executed:**
+
+```bash
+curl -I http://<VM-IP>:3000
+```
+
+**Result Summary:**
+
+| Parameter               | Status       |
+| ----------------------- | ------------ |
+| Network Connectivity    | ✅ Successful |
+| Port 3000 Accessibility | ✅ Open       |
+| HTTP Response Code      | `200 OK`     |
+| UI Service Status       | Running      |
+
+
+---
+
+## ❌ If It Fails (Quick Diagnostics)
+
+| Error              | Likely Cause              |
+| ------------------ | ------------------------- |
+| Connection refused | App not running           |
+| Timeout            | Firewall / security group |
+| 404                | App running, wrong route  |
+| 502/503            | Backend service issue     |
+
 
 ---
 
