--- a/Final_Setup/2.Upload-on-Github-CloneonVM-BuildfromVMlikeCI.md
+++ b/Final_Setup/2.Upload-on-Github-CloneonVM-BuildfromVMlikeCI.md
@@ -1,4 +1,4 @@
-
+x
 # 🚀 Employee Management Web App
 
 **Node.js (UI + REST API) + PostgreSQL (Dockerized)**
@@ -63,58 +63,7 @@ employee-app/
 
 ---
 
-## 🔹 PHASE 1: Application Creation (Local / VM)
-
-### 1️⃣ Clone Repository
-
-```bash
-git clone https://github.com/<YOUR-USERNAME>/employee-app.git
-cd employee-app
-```
-
----
-
-### 2️⃣ Docker Compose Configuration
-
-📄 `docker-compose.yml`
-
-```yaml
-version: "3.8"
-
-services:
-  postgres:
-    image: postgres:15
-    container_name: employee-postgres
-    environment:
-      POSTGRES_DB: employeedb
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: admin123
-    ports:
-      - "5432:5432"
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-
-  nodeapp:
-    build: ./backend
-    container_name: employee-nodeapp
-    ports:
-      - "3000:3000"
-    depends_on:
-      - postgres
-    environment:
-      DB_HOST: postgres
-      DB_USER: admin
-      DB_PASSWORD: admin123
-      DB_NAME: employeedb
-      DB_PORT: 5432
-
-volumes:
-  pgdata:
-```
-
----
-
-## 🔹 PHASE 2: GitHub Push (Source Control)
+## 🔹 PHASE 1: GitHub Push (Source Control)
 
 ### 1️⃣ Initialize Git
 
@@ -147,7 +96,7 @@ git push -u origin main
 
 ---
 
-## 🔹 PHASE 3: Clone on VM (CI-Like Process)
+## 🔹 PHASE 2: Clone on VM (CI-Like Process)
 
 This simulates a **CI server pulling source code**.
 
@@ -175,7 +124,7 @@ backend  docker-compose.yml
 
 ---
 
-## 🔹 PHASE 4: Build on VM (CI Build Step)
+## 🔹 PHASE 3: Build on VM (CI Build Step)
 
 ### 1️⃣ Build Application Image
 
@@ -211,13 +160,32 @@ employee-postgres
 
 ---
 
-## 🔹 PHASE 5: Application Validation
+## 🔹 PHASE 4: Application Validation
 
 ### 🌐 Access UI
 
 ```
 http://<VM-IP>:3000
 ```
+
+**Validation Method:**
+`curl` command-line HTTP request
+
+**Command Executed:**
+
+```bash
+curl -I http://<VM-IP>:3000
+```
+
+**Result Summary:**
+
+| Parameter               | Status       |
+| ----------------------- | ------------ |
+| Network Connectivity    | ✅ Successful |
+| Port 3000 Accessibility | ✅ Open       |
+| HTTP Response Code      | `200 OK`     |
+| UI Service Status       | Running      |
+
 
 ---
 
