--- a/Final_Setup/4.Nexus-Raw-Hosted-Repository-Creation -Download-zip-and-build-from-zip.md
+++ b/Final_Setup/4.Nexus-Raw-Hosted-Repository-Creation -Download-zip-and-build-from-zip.md
@@ -2,7 +2,7 @@ We’ll proceed **exactly as per your diagram** with a **Raw Hosted Repository**
 
 ---
 
-# 🧱 PHASE 6.1: CREATE RAW HOSTED REPOSITORY (NEXUS UI)
+# 🧱 PHASE 4.1: CREATE RAW HOSTED REPOSITORY (NEXUS UI)
 
 📍 **Where**: Nexus Web UI
 📍 **Who**: Admin user
@@ -105,9 +105,7 @@ employee-raw-repo   (raw-hosted)
 
 ---
 
-# 🔜 NEXT PHASE (VERY IMPORTANT)
-
-## 🧱 PHASE 6.2: CREATE BUILD ARTIFACT (ZIP)
+## 🧱 PHASE 4.2: CREATE BUILD ARTIFACT (ZIP)
 
 We will:
 
@@ -203,7 +201,7 @@ This is what Nexus is meant to store.
 
 ---
 
-# 🧱 PHASE 6.3: UPLOAD ARTIFACT TO NEXUS (RAW REPO)
+# 🧱 PHASE 4.3: UPLOAD ARTIFACT TO NEXUS (RAW REPO)
 
 📍 **Where**: VM
 📍 **Target**: Nexus Raw Hosted Repo (`employee-raw-repo`)
@@ -243,10 +241,6 @@ http://localhost:8081/repository/employee-raw-repo/employee-app/employee-app-1.0
 ✔ Artifact versioned
 ✔ Uploaded to Nexus
 ✔ GitHub → Build → Nexus completed
-
----
-Good question 👍
-I’ll show you **exactly where and how** to see the ZIP file in **Nexus UI**, step by step.
 
 ---
 
@@ -357,19 +351,8 @@ HTTP/1.1 200 OK
 ```
 
 ---
-
-## ✅ FINAL CONFIRMATION CHECK
-
-Reply with **ONE LINE ONLY**:
-
-```
-Zip visible in Nexus UI
-```
-
-Then we will move to **PHASE 7 – Nginx deployment from Nexus** 🚀
-
-Got it 👍  
-I’ll show you **ALL correct ways** to download the ZIP from **Nexus to local**, clearly separated so you can choose what you need.
+  
+It will show you **ALL correct ways** to download the ZIP from **Nexus to local**, clearly separated so you can choose what you need.
 
 ---
 
@@ -437,7 +420,7 @@ http://<VM-IP>:8081/repository/employee-raw-repo/employee-app/employee-app-1.0.0
 If your Nexus is public:
 
 ```powershell
-curl -u admin:<NEXUS_PASSWORD> `
+curl.exe -u admin:<NEXUS_PASSWORD> `
 -o employee-app-1.0.0.zip `
 http://<VM-IP>:8081/repository/employee-raw-repo/employee-app/employee-app-1.0.0.zip
 ```
@@ -465,35 +448,6 @@ employee-app/
 ✔ Artifact is downloadable  
 ✔ Ready for deployment  
 ✔ Matches enterprise DevOps flow  
-
----
-
-# 🔜 NEXT STEP (VERY IMPORTANT)
-
-## PHASE 7: DEPLOY USING NGINX (FROM NEXUS ZIP)
-
-We will:
-1. Download ZIP from Nexus
-2. Extract it
-3. Run Nginx container
-4. Serve app via Nginx
-
----
-
-### ✅ CONFIRM BEFORE MOVING ON
-
-Reply with **ONE LINE ONLY**:
-
-```
-Zip downloaded successfully
-```
-
-Then we continue 🚀
-👍 Great, this is a **Windows PowerShell–specific issue**, not Nexus or your artifact.
-
-PowerShell **does NOT use real `curl`** — it aliases `curl` to **Invoke-WebRequest**, which causes this exact error.
-
-Let me give you **100% WORKING Windows commands**.
 
 ---
 
@@ -570,16 +524,6 @@ You exposed your Nexus password in chat.
 👉 **Change Nexus admin password after this**.
 
 ---
-
-## ✅ FINAL CONFIRMATION
-
-Reply with **ONE LINE ONLY**:
-
-```
-Zip downloaded successfully on Windows
-```
-
-Then we move to **PHASE 7 – Nginx deployment from Nexus** 🚀
 
 # 🔜 NEXT PHASE (FINAL DEPLOYMENT)
 
